--- a/public/stylesheets/sass/application.sass
+++ b/public/stylesheets/sass/application.sass
@@ -1,10 +1,13 @@
 $primary_color: #4b7399
+$font_color: #666
 
 body
   background-color: $primary_color
   font:
+    color: $font_color
     family: Verdana, Helvetica, Arial
     size: 14px
+
 
 a
   color: blue
