--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -6,7 +6,7 @@
       = yield(:title) || "Untitled"
     %meta{"http-equiv"=>"Content-Type", :content=>"text/html; charset=utf-8"}/
     = stylesheet_link_tag "application", "bills"
-    = javascript_include_tag "https://ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js"
+    = javascript_include_tag "jquery.min.js", "jquery_ujs.js"
     -# = javascript_include_tag "sweet_tabs/script"
     = csrf_meta_tag
     = yield(:head)
