--- a/public/stylesheets/sweet_tabs/styles.css
+++ b/public/stylesheets/sweet_tabs/styles.css
@@ -6,7 +6,7 @@ body,h1,h2,h3,p,quote,small,form,input,ul,li,ol,label{
 
 body{
 	/* Setting default text color, background and a font stack */
-	color:#cccccc;
+	color:#666;
 	font-size:0.825em;
 	background-color: #1e2428;
 	font-family:Arial, Helvetica, sans-serif;
