--- a/public/stylesheets/sass/application.sass
+++ b/public/stylesheets/sass/application.sass
@@ -67,3 +67,32 @@ a
     margin: 8px 10px
   ul
     margin: 0
+
+form
+  p
+    padding: 4px
+    margin: 4px
+
+table
+  font-family: 'Lucida Sans Unicode', 'Lucida Grande', Sans-Serif
+  font-size: 12px
+  width: 480px
+  text-align: left
+  border: 1px solid black
+  // border-collapse: collapse
+  margin: 20px
+  tr
+    border: 1px solid black
+  th
+    border: 1px solid black
+    font-size: 14px
+    font-weight: normal
+    color: #039
+    padding: 10px 8px
+  td
+    border: 1px solid black
+    color: #669
+    padding: 8px
+  .odd
+    background: #e8edff
+
