sass cache removing

--- a/app/views/bills/new.html.haml
+++ b/app/views/bills/new.html.haml
@@ -17,3 +17,6 @@
     = label_tag "Quantity"
     = text_field_tag "order[o2][quantity]"
   = submit_tag "Print Bill"
+
+%p.shared_links
+  = link_to "See All Bills", bills_path
