--- a/app/views/bills/new.html.haml
+++ b/app/views/bills/new.html.haml
@@ -1,4 +1,5 @@
 = javascript_include_tag "bill_add_more_menus"
+- title "Gulati Punjabi Swad :  New Bill"
 
 = @bill.try(:errors).try(:full_messages)
 
