Adding only non zero quantities

--- a/app/views/bills/show.html.haml
+++ b/app/views/bills/show.html.haml
@@ -11,10 +11,11 @@
       %th Quantity
       %th Unit Price
     - @bill.bill_contents.each do |bill_content|
-      %tr
-        %td=bill_content.menu.name
-        %td=bill_content.quantity
-        %td=bill_content.menu.price
+      - if bill_content.quantity.to_i != 0
+        %tr
+          %td=bill_content.menu.name
+          %td=bill_content.quantity
+          %td=bill_content.menu.price
 %br/
 %p
   %strong Total:
