--- a/app/views/homes/index.html.haml
+++ b/app/views/homes/index.html.haml
@@ -1,1 +1,7 @@
 - title "Gulati Punjabi Swad"
+
+%h3
+  Important Links
+  %ul
+    %li
+      = link_to "Google Busines", "www.google.com/placesforbusiness"
