--- a/app/views/homes/index.html.haml
+++ b/app/views/homes/index.html.haml
@@ -5,3 +5,5 @@
   %ul
     %li
       = link_to "Google Busines", "www.google.com/placesforbusiness"
+    %li
+      = link_to "FaceBook", "http://www.facebook.com/gulatipunjabiswad"
