--- a/app/views/homes/index.html.haml
+++ b/app/views/homes/index.html.haml
@@ -4,6 +4,6 @@
   Important Links
   %ul
     %li
-      = link_to "Google Busines", "www.google.com/placesforbusiness"
+      = link_to "Google Busines", "http://www.google.com/placesforbusiness", :target => "_blank"
     %li
-      = link_to "FaceBook", "http://www.facebook.com/gulatipunjabiswad"
+      = link_to "FaceBook", "http://www.facebook.com/gulatipunjabiswad", :target => "_blank"
