--- a/app/views/shared/_tabs.html.haml
+++ b/app/views/shared/_tabs.html.haml
@@ -22,6 +22,11 @@
       %span.left
       %span.right
   %li
+    %a.tab.orange{ :href => vats_path } 
+      = "VAT"
+      %span.left
+      %span.right
+  %li
     %a.tab.yellow{ :href => (user_signed_in? ? destroy_user_session_path : user_session_path)} 
       = ( user_signed_in? ? "SignOut" : "SignIn")
       %span.left
