--- a/app/views/bills/print.html.haml
+++ b/app/views/bills/print.html.haml
@@ -18,5 +18,9 @@
             %td=bill_content.menu.price
       %tr
         %td &nbsp;
+        %td Vat
+        %td= @bill.vat_value
+      %tr
+        %td &nbsp;
         %td Total
         %td= @bill.total
