--- a/app/views/bills/show.html.haml
+++ b/app/views/bills/show.html.haml
@@ -12,17 +12,21 @@
       %th Item
       %th Quantity
       %th Unit Price
+      %th Total Price
     - @bill.bill_contents.each do |bill_content|
       - if bill_content.quantity.to_i != 0
         %tr
           %td=bill_content.menu.name
           %td=bill_content.quantity
           %td=bill_content.menu.price
+          %td=(bill_content.menu.price * bill_content.quantity)
     %tr
       %td &nbsp;
-      %td Vat
+      %td &nbsp;
+      %td= "Vat (#{Vat.last.tax}%)"
       %td= @bill.vat_value
     %tr
+      %td &nbsp;
       %td &nbsp;
       %th Total:
       %th= @bill.total
